@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-09T08:31:33Z",
-  "count" : 182,
-  "count_minmax" : [ 120, 351 ],
-  "count_decinc" : [ -169, +351 ],
+  "timestamp" : "2022-06-09T16:33:46Z",
+  "count" : 57,
+  "count_minmax" : [ 57, 351 ],
+  "count_decinc" : [ -294, +351 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
