@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-09T08:31:33Z",
-  "count" : 121,
-  "count_minmax" : [ 121, 121 ],
-  "count_decinc" : [ -0, +121 ],
+  "timestamp" : "2022-06-09T16:33:46Z",
+  "count" : 247,
+  "count_minmax" : [ 121, 247 ],
+  "count_decinc" : [ -0, +247 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
