@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-06-09T08:31:33Z",
+  "timestamp" : "2022-06-09T16:33:46Z",
   "count_outdated" : 26559,
   "uniques_outdated" : 598,
-  "count" : 31462,
+  "count" : 31463,
   "uniques" : 636,
   "clones" : [
     {
       "timestamp": "2022-05-26T00:00:00Z",
-      "count": 182,
-      "count_minmax": [ 120, 351 ],
+      "count": 57,
+      "count_minmax": [ 57, 351 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-06-09T00:00:00Z",
-      "count": 121,
-      "count_minmax": [ 121, 121 ],
+      "count": 247,
+      "count_minmax": [ 121, 247 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
