@@ -1,10 +1,10 @@
 {
-  "count": 4903,
+  "count": 4904,
   "uniques": 12,
   "clones": [
     {
       "timestamp": "2022-05-26T00:00:00Z",
-      "count": 182,
+      "count": 57,
       "uniques": 1
     },
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-06-09T00:00:00Z",
-      "count": 121,
+      "count": 247,
       "uniques": 2
     }
   ]
